// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in component <App /> should make snapshot 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test in component <App /> should show a list of categories 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Twice"
      key="Twice"
    />
    <GifGrid
      category="Seventeen"
      key="Seventeen"
    />
  </ol>
</Fragment>
`;
